# AutoNotes

./: .env.example  README.md  pyproject.toml
backend/app/api/routes/: chat.py  documents.py  podcast.py
backend/app/core/: config.py
backend/app/services/: pdf_processor.py  podcast_service.py  rag_service.py  vector_store.py
eval/: results_baseline.csv  run_eval.py  testset.json
frontend/public/: index.html
frontend/src/: App.tsx
